# project-python-flask

./: .env.example  .pre-commit-config.yaml  LICENSE  README-Windows.md  README.md  README.txt  app.py  pyproject.toml  run.py  tickets.txt
.github/workflows/: ci.yml  lint-and-test.yml  test.yml
app/: __init__.py  config.py  models.py
app/routes/: __init__.py  roles_routes.py  user_routes.py
app/services/: role_service.py  user_service.py
app/utils/: auth.py
migrations/: env.py
migrations/versions/: 0e9d6f8f6665_add_role_fields_to_user.py  154a10f1d3f3_add_role_model_and_user_roles_.py  19c3d8fa2068_.py  522fbb921d60_.py  85fcad094aee_add_is_active_and_inactivated_on_fields_.py  8e0626ed0ebe_added_access_level_to_users_table.py  ad001a8e8938_add_user_and_role_model.py  bc00a2b343b6_.py  d496c141abd6_modded_users_table_and_added_roles_.py  d7cc877e7cf0_update_user_and_useractivestatuschange_.py  dcfa167aa33c_change_status_column_from_boolean_to_.py  f33290d5c463_migration.py  f9213fe72dcc_.py
tests/: conftest.py  test_auth.py  test_roles.py
tools/: reset.sh
