[tool.poetry]
name = "project-python-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3"
flask-sqlalchemy = "^3.0"
flask-migrate = "^4.0"
flask-bcrypt = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
